--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,8 @@
 .header{
-    height: 34vw;
+    height: 483.55px;
+    width: 1124.14px;
     margin: 30px auto;
-    background: url('./header_img.png') no-repeat;
+    background: url('/header_img.png') no-repeat;
     background-size: contain;
     position: relative;
 }
